// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderMail 스냅샷 snapshot resetPassword en logo=none 1`] = `
{
  "html": "<!doctype html>
<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light">
<title>Reset your password for Kit</title></head>
<body style="margin:0;padding:0;background:#FFFFFF;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">Set a new password for your account.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#FFFFFF;">
<tr><td align="center" style="padding:32px 24px;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:560px;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;color:#1F1F1F;">
<tr><td style="padding:0 0 32px;"><span style="font-size:20px;line-height:1.2;font-weight:700;color:#1F1F1F;">Kit</span></td></tr>
<tr><td style="font-size:24px;line-height:1.3;font-weight:700;padding:0 0 16px;">Reset your password</td></tr>
<tr><td style="font-size:16px;line-height:1.5;padding:0 0 32px;">Click the button below to set a new password for <span style="word-break:break-all;">a@example.com</span>.</td></tr>
<tr><td style="padding:0 0 32px;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
  <td bgcolor="#673AB7" style="border-radius:24px;">
    <a href="https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=en" target="_blank" style="display:inline-block;padding:12px 24px;font-size:16px;line-height:24px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:24px;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">Reset password</a>
  </td></tr></table>
</td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:0 0 24px;">If you didn&#x27;t ask to reset your password, you can ignore this email. Your password won&#x27;t change.</td></tr>
<tr><td style="border-top:1px solid #E0E0E0;padding:24px 0 0;font-size:14px;line-height:1.4;color:#5F6368;">If the button doesn&#x27;t work, paste this link into your browser:<br>
<a href="https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=en" style="color:#1F1F1F;text-decoration:underline;word-break:break-all;">https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=en</a></td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:24px 0 0;">This email was sent by Kit.</td></tr>
</table>
</td></tr></table>
</body></html>
",
  "subject": "Reset your password for Kit",
  "text": "Reset your password

Click the button below to set a new password for a@example.com.

https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=en

If you didn't ask to reset your password, you can ignore this email. Your password won't change.

--
This email was sent by Kit.",
}
`;

exports[`renderMail 스냅샷 snapshot resetPassword en logo=with 1`] = `
{
  "html": "<!doctype html>
<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light">
<title>Reset your password for Kit</title></head>
<body style="margin:0;padding:0;background:#FFFFFF;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">Set a new password for your account.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#FFFFFF;">
<tr><td align="center" style="padding:32px 24px;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:560px;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;color:#1F1F1F;">
<tr><td style="padding:0 0 32px;"><img src="https://example.web.app/logo.png" alt="Kit" height="40" style="display:block;height:40px;width:auto;max-width:160px;border:0;"></td></tr>
<tr><td style="font-size:24px;line-height:1.3;font-weight:700;padding:0 0 16px;">Reset your password</td></tr>
<tr><td style="font-size:16px;line-height:1.5;padding:0 0 32px;">Click the button below to set a new password for <span style="word-break:break-all;">a@example.com</span>.</td></tr>
<tr><td style="padding:0 0 32px;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
  <td bgcolor="#673AB7" style="border-radius:24px;">
    <a href="https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=en" target="_blank" style="display:inline-block;padding:12px 24px;font-size:16px;line-height:24px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:24px;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">Reset password</a>
  </td></tr></table>
</td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:0 0 24px;">If you didn&#x27;t ask to reset your password, you can ignore this email. Your password won&#x27;t change.</td></tr>
<tr><td style="border-top:1px solid #E0E0E0;padding:24px 0 0;font-size:14px;line-height:1.4;color:#5F6368;">If the button doesn&#x27;t work, paste this link into your browser:<br>
<a href="https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=en" style="color:#1F1F1F;text-decoration:underline;word-break:break-all;">https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=en</a></td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:24px 0 0;">This email was sent by Kit.</td></tr>
</table>
</td></tr></table>
</body></html>
",
  "subject": "Reset your password for Kit",
  "text": "Reset your password

Click the button below to set a new password for a@example.com.

https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=en

If you didn't ask to reset your password, you can ignore this email. Your password won't change.

--
This email was sent by Kit.",
}
`;

exports[`renderMail 스냅샷 snapshot resetPassword ja logo=none 1`] = `
{
  "html": "<!doctype html>
<html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light">
<title>Kitのパスワード再設定</title></head>
<body style="margin:0;padding:0;background:#FFFFFF;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">アカウントの新しいパスワードを設定します。</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#FFFFFF;">
<tr><td align="center" style="padding:32px 24px;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:560px;font-family:-apple-system,'Hiragino Sans',Roboto,'Noto Sans JP','Yu Gothic',Meiryo,sans-serif;color:#1F1F1F;">
<tr><td style="padding:0 0 32px;"><span style="font-size:20px;line-height:1.2;font-weight:700;color:#1F1F1F;">Kit</span></td></tr>
<tr><td style="font-size:24px;line-height:1.3;font-weight:700;padding:0 0 16px;">パスワードを再設定してください</td></tr>
<tr><td style="font-size:16px;line-height:1.5;padding:0 0 32px;">下のボタンを押して、<span style="word-break:break-all;">a@example.com</span>のアカウントの新しいパスワードを設定してください。</td></tr>
<tr><td style="padding:0 0 32px;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
  <td bgcolor="#673AB7" style="border-radius:24px;">
    <a href="https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ja" target="_blank" style="display:inline-block;padding:12px 24px;font-size:16px;line-height:24px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:24px;font-family:-apple-system,'Hiragino Sans',Roboto,'Noto Sans JP','Yu Gothic',Meiryo,sans-serif;">パスワードを再設定</a>
  </td></tr></table>
</td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:0 0 24px;">再設定をリクエストしていない場合は、このメールを無視してください。パスワードは変更されません。</td></tr>
<tr><td style="border-top:1px solid #E0E0E0;padding:24px 0 0;font-size:14px;line-height:1.4;color:#5F6368;">ボタンが開かない場合は、次のURLをブラウザに貼り付けてください。<br>
<a href="https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ja" style="color:#1F1F1F;text-decoration:underline;word-break:break-all;">https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ja</a></td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:24px 0 0;">このメールはKitから送信されました。</td></tr>
</table>
</td></tr></table>
</body></html>
",
  "subject": "Kitのパスワード再設定",
  "text": "パスワードを再設定してください

下のボタンを押して、a@example.comのアカウントの新しいパスワードを設定してください。

https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ja

再設定をリクエストしていない場合は、このメールを無視してください。パスワードは変更されません。

--
このメールはKitから送信されました。",
}
`;

exports[`renderMail 스냅샷 snapshot resetPassword ja logo=with 1`] = `
{
  "html": "<!doctype html>
<html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light">
<title>Kitのパスワード再設定</title></head>
<body style="margin:0;padding:0;background:#FFFFFF;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">アカウントの新しいパスワードを設定します。</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#FFFFFF;">
<tr><td align="center" style="padding:32px 24px;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:560px;font-family:-apple-system,'Hiragino Sans',Roboto,'Noto Sans JP','Yu Gothic',Meiryo,sans-serif;color:#1F1F1F;">
<tr><td style="padding:0 0 32px;"><img src="https://example.web.app/logo.png" alt="Kit" height="40" style="display:block;height:40px;width:auto;max-width:160px;border:0;"></td></tr>
<tr><td style="font-size:24px;line-height:1.3;font-weight:700;padding:0 0 16px;">パスワードを再設定してください</td></tr>
<tr><td style="font-size:16px;line-height:1.5;padding:0 0 32px;">下のボタンを押して、<span style="word-break:break-all;">a@example.com</span>のアカウントの新しいパスワードを設定してください。</td></tr>
<tr><td style="padding:0 0 32px;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
  <td bgcolor="#673AB7" style="border-radius:24px;">
    <a href="https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ja" target="_blank" style="display:inline-block;padding:12px 24px;font-size:16px;line-height:24px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:24px;font-family:-apple-system,'Hiragino Sans',Roboto,'Noto Sans JP','Yu Gothic',Meiryo,sans-serif;">パスワードを再設定</a>
  </td></tr></table>
</td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:0 0 24px;">再設定をリクエストしていない場合は、このメールを無視してください。パスワードは変更されません。</td></tr>
<tr><td style="border-top:1px solid #E0E0E0;padding:24px 0 0;font-size:14px;line-height:1.4;color:#5F6368;">ボタンが開かない場合は、次のURLをブラウザに貼り付けてください。<br>
<a href="https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ja" style="color:#1F1F1F;text-decoration:underline;word-break:break-all;">https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ja</a></td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:24px 0 0;">このメールはKitから送信されました。</td></tr>
</table>
</td></tr></table>
</body></html>
",
  "subject": "Kitのパスワード再設定",
  "text": "パスワードを再設定してください

下のボタンを押して、a@example.comのアカウントの新しいパスワードを設定してください。

https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ja

再設定をリクエストしていない場合は、このメールを無視してください。パスワードは変更されません。

--
このメールはKitから送信されました。",
}
`;

exports[`renderMail 스냅샷 snapshot resetPassword ko logo=none 1`] = `
{
  "html": "<!doctype html>
<html lang="ko"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light">
<title>Kit 비밀번호 재설정</title></head>
<body style="margin:0;padding:0;background:#FFFFFF;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">계정의 새 비밀번호를 설정합니다.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#FFFFFF;">
<tr><td align="center" style="padding:32px 24px;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:560px;font-family:-apple-system,'Apple SD Gothic Neo',Roboto,'Noto Sans KR','Malgun Gothic',sans-serif;color:#1F1F1F;word-break:keep-all;">
<tr><td style="padding:0 0 32px;"><span style="font-size:20px;line-height:1.2;font-weight:700;color:#1F1F1F;">Kit</span></td></tr>
<tr><td style="font-size:24px;line-height:1.3;font-weight:700;padding:0 0 16px;">비밀번호를 재설정해 주세요</td></tr>
<tr><td style="font-size:16px;line-height:1.5;padding:0 0 32px;">아래 버튼을 눌러 <span style="word-break:break-all;">a@example.com</span> 계정의 새 비밀번호를 설정해 주세요.</td></tr>
<tr><td style="padding:0 0 32px;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
  <td bgcolor="#673AB7" style="border-radius:24px;">
    <a href="https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ko" target="_blank" style="display:inline-block;padding:12px 24px;font-size:16px;line-height:24px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:24px;font-family:-apple-system,'Apple SD Gothic Neo',Roboto,'Noto Sans KR','Malgun Gothic',sans-serif;">비밀번호 재설정</a>
  </td></tr></table>
</td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:0 0 24px;">재설정을 요청하지 않았다면 이 메일을 무시해 주세요. 비밀번호는 바뀌지 않습니다.</td></tr>
<tr><td style="border-top:1px solid #E0E0E0;padding:24px 0 0;font-size:14px;line-height:1.4;color:#5F6368;">버튼이 열리지 않으면 아래 주소를 브라우저에 붙여 넣어 주세요.<br>
<a href="https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ko" style="color:#1F1F1F;text-decoration:underline;word-break:break-all;">https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ko</a></td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:24px 0 0;">이 메일은 Kit에서 보냈습니다.</td></tr>
</table>
</td></tr></table>
</body></html>
",
  "subject": "Kit 비밀번호 재설정",
  "text": "비밀번호를 재설정해 주세요

아래 버튼을 눌러 a@example.com 계정의 새 비밀번호를 설정해 주세요.

https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ko

재설정을 요청하지 않았다면 이 메일을 무시해 주세요. 비밀번호는 바뀌지 않습니다.

--
이 메일은 Kit에서 보냈습니다.",
}
`;

exports[`renderMail 스냅샷 snapshot resetPassword ko logo=with 1`] = `
{
  "html": "<!doctype html>
<html lang="ko"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light">
<title>Kit 비밀번호 재설정</title></head>
<body style="margin:0;padding:0;background:#FFFFFF;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">계정의 새 비밀번호를 설정합니다.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#FFFFFF;">
<tr><td align="center" style="padding:32px 24px;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:560px;font-family:-apple-system,'Apple SD Gothic Neo',Roboto,'Noto Sans KR','Malgun Gothic',sans-serif;color:#1F1F1F;word-break:keep-all;">
<tr><td style="padding:0 0 32px;"><img src="https://example.web.app/logo.png" alt="Kit" height="40" style="display:block;height:40px;width:auto;max-width:160px;border:0;"></td></tr>
<tr><td style="font-size:24px;line-height:1.3;font-weight:700;padding:0 0 16px;">비밀번호를 재설정해 주세요</td></tr>
<tr><td style="font-size:16px;line-height:1.5;padding:0 0 32px;">아래 버튼을 눌러 <span style="word-break:break-all;">a@example.com</span> 계정의 새 비밀번호를 설정해 주세요.</td></tr>
<tr><td style="padding:0 0 32px;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
  <td bgcolor="#673AB7" style="border-radius:24px;">
    <a href="https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ko" target="_blank" style="display:inline-block;padding:12px 24px;font-size:16px;line-height:24px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:24px;font-family:-apple-system,'Apple SD Gothic Neo',Roboto,'Noto Sans KR','Malgun Gothic',sans-serif;">비밀번호 재설정</a>
  </td></tr></table>
</td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:0 0 24px;">재설정을 요청하지 않았다면 이 메일을 무시해 주세요. 비밀번호는 바뀌지 않습니다.</td></tr>
<tr><td style="border-top:1px solid #E0E0E0;padding:24px 0 0;font-size:14px;line-height:1.4;color:#5F6368;">버튼이 열리지 않으면 아래 주소를 브라우저에 붙여 넣어 주세요.<br>
<a href="https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ko" style="color:#1F1F1F;text-decoration:underline;word-break:break-all;">https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ko</a></td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:24px 0 0;">이 메일은 Kit에서 보냈습니다.</td></tr>
</table>
</td></tr></table>
</body></html>
",
  "subject": "Kit 비밀번호 재설정",
  "text": "비밀번호를 재설정해 주세요

아래 버튼을 눌러 a@example.com 계정의 새 비밀번호를 설정해 주세요.

https://example.firebaseapp.com/__/auth/action?mode=resetPassword&oobCode=c&apiKey=k&lang=ko

재설정을 요청하지 않았다면 이 메일을 무시해 주세요. 비밀번호는 바뀌지 않습니다.

--
이 메일은 Kit에서 보냈습니다.",
}
`;

exports[`renderMail 스냅샷 snapshot verifyEmail en logo=none 1`] = `
{
  "html": "<!doctype html>
<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light">
<title>Verify your email for Kit</title></head>
<body style="margin:0;padding:0;background:#FFFFFF;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">Confirm that this email address is yours.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#FFFFFF;">
<tr><td align="center" style="padding:32px 24px;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:560px;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;color:#1F1F1F;">
<tr><td style="padding:0 0 32px;"><span style="font-size:20px;line-height:1.2;font-weight:700;color:#1F1F1F;">Kit</span></td></tr>
<tr><td style="font-size:24px;line-height:1.3;font-weight:700;padding:0 0 16px;">Verify your email address</td></tr>
<tr><td style="font-size:16px;line-height:1.5;padding:0 0 32px;">Click the button below to verify <span style="word-break:break-all;">a@example.com</span>.</td></tr>
<tr><td style="padding:0 0 32px;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
  <td bgcolor="#673AB7" style="border-radius:24px;">
    <a href="https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=en" target="_blank" style="display:inline-block;padding:12px 24px;font-size:16px;line-height:24px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:24px;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">Verify email</a>
  </td></tr></table>
</td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:0 0 24px;">If you didn&#x27;t ask to verify this address, you can ignore this email.</td></tr>
<tr><td style="border-top:1px solid #E0E0E0;padding:24px 0 0;font-size:14px;line-height:1.4;color:#5F6368;">If the button doesn&#x27;t work, paste this link into your browser:<br>
<a href="https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=en" style="color:#1F1F1F;text-decoration:underline;word-break:break-all;">https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=en</a></td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:24px 0 0;">This email was sent by Kit.</td></tr>
</table>
</td></tr></table>
</body></html>
",
  "subject": "Verify your email for Kit",
  "text": "Verify your email address

Click the button below to verify a@example.com.

https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=en

If you didn't ask to verify this address, you can ignore this email.

--
This email was sent by Kit.",
}
`;

exports[`renderMail 스냅샷 snapshot verifyEmail en logo=with 1`] = `
{
  "html": "<!doctype html>
<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light">
<title>Verify your email for Kit</title></head>
<body style="margin:0;padding:0;background:#FFFFFF;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">Confirm that this email address is yours.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#FFFFFF;">
<tr><td align="center" style="padding:32px 24px;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:560px;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;color:#1F1F1F;">
<tr><td style="padding:0 0 32px;"><img src="https://example.web.app/logo.png" alt="Kit" height="40" style="display:block;height:40px;width:auto;max-width:160px;border:0;"></td></tr>
<tr><td style="font-size:24px;line-height:1.3;font-weight:700;padding:0 0 16px;">Verify your email address</td></tr>
<tr><td style="font-size:16px;line-height:1.5;padding:0 0 32px;">Click the button below to verify <span style="word-break:break-all;">a@example.com</span>.</td></tr>
<tr><td style="padding:0 0 32px;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
  <td bgcolor="#673AB7" style="border-radius:24px;">
    <a href="https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=en" target="_blank" style="display:inline-block;padding:12px 24px;font-size:16px;line-height:24px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:24px;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">Verify email</a>
  </td></tr></table>
</td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:0 0 24px;">If you didn&#x27;t ask to verify this address, you can ignore this email.</td></tr>
<tr><td style="border-top:1px solid #E0E0E0;padding:24px 0 0;font-size:14px;line-height:1.4;color:#5F6368;">If the button doesn&#x27;t work, paste this link into your browser:<br>
<a href="https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=en" style="color:#1F1F1F;text-decoration:underline;word-break:break-all;">https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=en</a></td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:24px 0 0;">This email was sent by Kit.</td></tr>
</table>
</td></tr></table>
</body></html>
",
  "subject": "Verify your email for Kit",
  "text": "Verify your email address

Click the button below to verify a@example.com.

https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=en

If you didn't ask to verify this address, you can ignore this email.

--
This email was sent by Kit.",
}
`;

exports[`renderMail 스냅샷 snapshot verifyEmail ja logo=none 1`] = `
{
  "html": "<!doctype html>
<html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light">
<title>Kitのメールアドレス確認</title></head>
<body style="margin:0;padding:0;background:#FFFFFF;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">このメールアドレスがご本人のものか確認します。</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#FFFFFF;">
<tr><td align="center" style="padding:32px 24px;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:560px;font-family:-apple-system,'Hiragino Sans',Roboto,'Noto Sans JP','Yu Gothic',Meiryo,sans-serif;color:#1F1F1F;">
<tr><td style="padding:0 0 32px;"><span style="font-size:20px;line-height:1.2;font-weight:700;color:#1F1F1F;">Kit</span></td></tr>
<tr><td style="font-size:24px;line-height:1.3;font-weight:700;padding:0 0 16px;">メールアドレスを確認してください</td></tr>
<tr><td style="font-size:16px;line-height:1.5;padding:0 0 32px;">下のボタンを押して、<span style="word-break:break-all;">a@example.com</span>を確認してください。</td></tr>
<tr><td style="padding:0 0 32px;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
  <td bgcolor="#673AB7" style="border-radius:24px;">
    <a href="https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ja" target="_blank" style="display:inline-block;padding:12px 24px;font-size:16px;line-height:24px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:24px;font-family:-apple-system,'Hiragino Sans',Roboto,'Noto Sans JP','Yu Gothic',Meiryo,sans-serif;">メールアドレスを確認</a>
  </td></tr></table>
</td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:0 0 24px;">確認をリクエストしていない場合は、このメールを無視してください。</td></tr>
<tr><td style="border-top:1px solid #E0E0E0;padding:24px 0 0;font-size:14px;line-height:1.4;color:#5F6368;">ボタンが開かない場合は、次のURLをブラウザに貼り付けてください。<br>
<a href="https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ja" style="color:#1F1F1F;text-decoration:underline;word-break:break-all;">https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ja</a></td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:24px 0 0;">このメールはKitから送信されました。</td></tr>
</table>
</td></tr></table>
</body></html>
",
  "subject": "Kitのメールアドレス確認",
  "text": "メールアドレスを確認してください

下のボタンを押して、a@example.comを確認してください。

https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ja

確認をリクエストしていない場合は、このメールを無視してください。

--
このメールはKitから送信されました。",
}
`;

exports[`renderMail 스냅샷 snapshot verifyEmail ja logo=with 1`] = `
{
  "html": "<!doctype html>
<html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light">
<title>Kitのメールアドレス確認</title></head>
<body style="margin:0;padding:0;background:#FFFFFF;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">このメールアドレスがご本人のものか確認します。</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#FFFFFF;">
<tr><td align="center" style="padding:32px 24px;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:560px;font-family:-apple-system,'Hiragino Sans',Roboto,'Noto Sans JP','Yu Gothic',Meiryo,sans-serif;color:#1F1F1F;">
<tr><td style="padding:0 0 32px;"><img src="https://example.web.app/logo.png" alt="Kit" height="40" style="display:block;height:40px;width:auto;max-width:160px;border:0;"></td></tr>
<tr><td style="font-size:24px;line-height:1.3;font-weight:700;padding:0 0 16px;">メールアドレスを確認してください</td></tr>
<tr><td style="font-size:16px;line-height:1.5;padding:0 0 32px;">下のボタンを押して、<span style="word-break:break-all;">a@example.com</span>を確認してください。</td></tr>
<tr><td style="padding:0 0 32px;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
  <td bgcolor="#673AB7" style="border-radius:24px;">
    <a href="https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ja" target="_blank" style="display:inline-block;padding:12px 24px;font-size:16px;line-height:24px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:24px;font-family:-apple-system,'Hiragino Sans',Roboto,'Noto Sans JP','Yu Gothic',Meiryo,sans-serif;">メールアドレスを確認</a>
  </td></tr></table>
</td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:0 0 24px;">確認をリクエストしていない場合は、このメールを無視してください。</td></tr>
<tr><td style="border-top:1px solid #E0E0E0;padding:24px 0 0;font-size:14px;line-height:1.4;color:#5F6368;">ボタンが開かない場合は、次のURLをブラウザに貼り付けてください。<br>
<a href="https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ja" style="color:#1F1F1F;text-decoration:underline;word-break:break-all;">https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ja</a></td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:24px 0 0;">このメールはKitから送信されました。</td></tr>
</table>
</td></tr></table>
</body></html>
",
  "subject": "Kitのメールアドレス確認",
  "text": "メールアドレスを確認してください

下のボタンを押して、a@example.comを確認してください。

https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ja

確認をリクエストしていない場合は、このメールを無視してください。

--
このメールはKitから送信されました。",
}
`;

exports[`renderMail 스냅샷 snapshot verifyEmail ko logo=none 1`] = `
{
  "html": "<!doctype html>
<html lang="ko"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light">
<title>Kit 이메일 주소 인증</title></head>
<body style="margin:0;padding:0;background:#FFFFFF;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">이 이메일 주소가 본인 것인지 확인합니다.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#FFFFFF;">
<tr><td align="center" style="padding:32px 24px;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:560px;font-family:-apple-system,'Apple SD Gothic Neo',Roboto,'Noto Sans KR','Malgun Gothic',sans-serif;color:#1F1F1F;word-break:keep-all;">
<tr><td style="padding:0 0 32px;"><span style="font-size:20px;line-height:1.2;font-weight:700;color:#1F1F1F;">Kit</span></td></tr>
<tr><td style="font-size:24px;line-height:1.3;font-weight:700;padding:0 0 16px;">이메일 주소를 인증해 주세요</td></tr>
<tr><td style="font-size:16px;line-height:1.5;padding:0 0 32px;">아래 버튼을 눌러 <span style="word-break:break-all;">a@example.com</span> 주소를 인증해 주세요.</td></tr>
<tr><td style="padding:0 0 32px;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
  <td bgcolor="#673AB7" style="border-radius:24px;">
    <a href="https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ko" target="_blank" style="display:inline-block;padding:12px 24px;font-size:16px;line-height:24px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:24px;font-family:-apple-system,'Apple SD Gothic Neo',Roboto,'Noto Sans KR','Malgun Gothic',sans-serif;">이메일 인증하기</a>
  </td></tr></table>
</td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:0 0 24px;">인증을 요청하지 않았다면 이 메일을 무시해 주세요.</td></tr>
<tr><td style="border-top:1px solid #E0E0E0;padding:24px 0 0;font-size:14px;line-height:1.4;color:#5F6368;">버튼이 열리지 않으면 아래 주소를 브라우저에 붙여 넣어 주세요.<br>
<a href="https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ko" style="color:#1F1F1F;text-decoration:underline;word-break:break-all;">https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ko</a></td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:24px 0 0;">이 메일은 Kit에서 보냈습니다.</td></tr>
</table>
</td></tr></table>
</body></html>
",
  "subject": "Kit 이메일 주소 인증",
  "text": "이메일 주소를 인증해 주세요

아래 버튼을 눌러 a@example.com 주소를 인증해 주세요.

https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ko

인증을 요청하지 않았다면 이 메일을 무시해 주세요.

--
이 메일은 Kit에서 보냈습니다.",
}
`;

exports[`renderMail 스냅샷 snapshot verifyEmail ko logo=with 1`] = `
{
  "html": "<!doctype html>
<html lang="ko"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="color-scheme" content="light"><meta name="supported-color-schemes" content="light">
<title>Kit 이메일 주소 인증</title></head>
<body style="margin:0;padding:0;background:#FFFFFF;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">이 이메일 주소가 본인 것인지 확인합니다.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#FFFFFF;">
<tr><td align="center" style="padding:32px 24px;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:560px;font-family:-apple-system,'Apple SD Gothic Neo',Roboto,'Noto Sans KR','Malgun Gothic',sans-serif;color:#1F1F1F;word-break:keep-all;">
<tr><td style="padding:0 0 32px;"><img src="https://example.web.app/logo.png" alt="Kit" height="40" style="display:block;height:40px;width:auto;max-width:160px;border:0;"></td></tr>
<tr><td style="font-size:24px;line-height:1.3;font-weight:700;padding:0 0 16px;">이메일 주소를 인증해 주세요</td></tr>
<tr><td style="font-size:16px;line-height:1.5;padding:0 0 32px;">아래 버튼을 눌러 <span style="word-break:break-all;">a@example.com</span> 주소를 인증해 주세요.</td></tr>
<tr><td style="padding:0 0 32px;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
  <td bgcolor="#673AB7" style="border-radius:24px;">
    <a href="https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ko" target="_blank" style="display:inline-block;padding:12px 24px;font-size:16px;line-height:24px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:24px;font-family:-apple-system,'Apple SD Gothic Neo',Roboto,'Noto Sans KR','Malgun Gothic',sans-serif;">이메일 인증하기</a>
  </td></tr></table>
</td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:0 0 24px;">인증을 요청하지 않았다면 이 메일을 무시해 주세요.</td></tr>
<tr><td style="border-top:1px solid #E0E0E0;padding:24px 0 0;font-size:14px;line-height:1.4;color:#5F6368;">버튼이 열리지 않으면 아래 주소를 브라우저에 붙여 넣어 주세요.<br>
<a href="https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ko" style="color:#1F1F1F;text-decoration:underline;word-break:break-all;">https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ko</a></td></tr>
<tr><td style="font-size:14px;line-height:1.4;color:#5F6368;padding:24px 0 0;">이 메일은 Kit에서 보냈습니다.</td></tr>
</table>
</td></tr></table>
</body></html>
",
  "subject": "Kit 이메일 주소 인증",
  "text": "이메일 주소를 인증해 주세요

아래 버튼을 눌러 a@example.com 주소를 인증해 주세요.

https://example.firebaseapp.com/__/auth/action?mode=verifyEmail&oobCode=c&apiKey=k&lang=ko

인증을 요청하지 않았다면 이 메일을 무시해 주세요.

--
이 메일은 Kit에서 보냈습니다.",
}
`;
